Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
     \section{Desenvolvimento}
         \import{sections/}{section2}
     \section{Experimentos e Resultados}
+        \import{sections/}{section3-Intro}
         \import{sections/}{section3-1}
         \import{sections/}{section3-2}
         \import{sections/}{section3-3}
