--- a/res/preambule.sty
+++ b/res/preambule.sty
@@ -46,6 +46,7 @@ tikz
 \newcolumntype{C}[1]{>{\Centering}m{#1}}
 \renewcommand\tabularxcolumn[1]{C{#1}}
 \usepackage{afterpage}
+\usepackage{gensymb}
 
 \usepackage{res/macros}
 
