--- a/sections/section1.tex
+++ b/sections/section1.tex
@@ -1,1 +1,10 @@
 % Introdução
+\subsection{Método do Gradiente}
+\subsection{Método de Newton}
+\subsection{Métodos de Quase-Newton}
+\subsection{Método BFGS}
+\subsection{Método DFP}
+\subsection{Adaptação de Huang}
+\subsection{Adaptação de Bings}
+
+\newpage
