--- a/sections/section3-6.tex
+++ b/sections/section3-6.tex
@@ -1,235 +1,13 @@
 % Experimentos e Resultados
-
-\pgfplotstableread{data/sec1s1tbl17_tEnd.txt}{\tblAa}
-\pgfplotstableread{data/sec1s1tbl17_N_Iter.txt}{\tblAb}
-\pgfplotstableread{data/sec1s1tbl17_N_Evals.txt}{\tblAc}
-\pgfplotstableread{data/sec1s1tbl17_Erro_Xsol_P.txt}{\tblAd}
-\pgfplotstableread{data/sec1s1tbl17_Erro_F_P.txt}{\tblAe}
-\pgfplotstableread{data/sec1s1tbl17_DFP_raw.txt}{\tblADFP}
-\pgfplotstableread{data/sec1s1tbl17_BFGS_raw.txt}{\tblABFGS}
-\pgfplotstableread{data/sec1s1tbl17_Huang_raw.txt}{\tblAHuang}
-\pgfplotstableread{data/sec1s1tbl17_Biggs_raw.txt}{\tblABiggs}
-
-\pgfplotstableread{data/sec1s1tbl18_tEnd.txt}{\tblBa}
-\pgfplotstableread{data/sec1s1tbl18_N_Iter.txt}{\tblBb}
-\pgfplotstableread{data/sec1s1tbl18_N_Evals.txt}{\tblBc}
-\pgfplotstableread{data/sec1s1tbl18_Erro_Xsol_P.txt}{\tblBd}
-\pgfplotstableread{data/sec1s1tbl18_Erro_F_P.txt}{\tblBe}
-\pgfplotstableread{data/sec1s1tbl18_DFP_raw.txt}{\tblBDFP}
-\pgfplotstableread{data/sec1s1tbl18_BFGS_raw.txt}{\tblBBFGS}
-\pgfplotstableread{data/sec1s1tbl18_Huang_raw.txt}{\tblBHuang}
-\pgfplotstableread{data/sec1s1tbl18_Biggs_raw.txt}{\tblBBiggs}
-
-\pgfplotstableread{data/sec1s1tbl19_tEnd.txt}{\tblCa}
-\pgfplotstableread{data/sec1s1tbl19_N_Iter.txt}{\tblCb}
-\pgfplotstableread{data/sec1s1tbl19_N_Evals.txt}{\tblCc}
-\pgfplotstableread{data/sec1s1tbl19_Erro_Xsol_P.txt}{\tblCd}
-\pgfplotstableread{data/sec1s1tbl19_Erro_F_P.txt}{\tblCe}
-
-\pgfplotstableread{data/sec1s1tbl20_tEnd.txt}{\tblDa}
-\pgfplotstableread{data/sec1s1tbl20_N_Iter.txt}{\tblDb}
-\pgfplotstableread{data/sec1s1tbl20_N_Evals.txt}{\tblDc}
-\pgfplotstableread{data/sec1s1tbl20_Erro_Xsol_P.txt}{\tblDd}
-\pgfplotstableread{data/sec1s1tbl20_Erro_F_P.txt}{\tblDe}
-
 \subsection{6° Experimento: Avaliação Estatística dos Métodos Quase-Newton com Variação do Parâmetro $\alpha$}
     \subsubsection{Função Analisada}
 
-        \begin{minipage}[h!]{\linewidth}            
-            \centering
-            \hrule
-            \vspace{2mm}
-            Técnica da Seção Áurea Feita por meio da avaliação direta de $F(x)$ \\ $\alpha=-0.0236$
-            \vspace{2mm}
-            \noindent
-            \hrule 
-            \vspace{2mm}
-            Tempo de Processamento Médio\\
-            \label{tab:tblAa} 
-            \writetablestt{\tblAa}\par
-            \bigskip
-            \centering
-            Número de Iterações\\
-            \label{tab:tblAb} 
-            \writetablestt{\tblAb}\par
-            \bigskip
-            \centering
-            Número de Avaliações de $f(x)$\\
-            \label{tab:tblAc} 
-            \writetablestt{\tblAc}\par
-            \vspace{2mm}
-            \hrule
-            \vspace{2mm}
-            \captionof{table}{Análise estatística dos Métodos Quase-Newton para a técnica da seção áurea feita por meio da avaliação direta da função objetivo e parâmetro $\alpha=-0.0263$}
-        \end{minipage}
-
-             
-
- 
-            
-        \begin{figure}[h!]            \pgfplotsset{width=8cm,height=4.94cm,compat=1.18}\usepgfplotslibrary{statistics} 
-            \centering            
-            \subfloat[\centering label 1]{{
-                \begin{tikzpicture}
-                    \begin{semilogyaxis}[
-                        boxplot,
-                        table/y=TEnd,
-                        boxplot/draw direction=y,
-                        title={Tempo total de execução},
-                        xlabel={Métodos},
-                        grid=major,
-                        xtick={1,2,3,4},
-                        xticklabels={DFP,BFGS,Huang,Biggs},]
-                        \addplot table{\tblADFP};
-                        \addplot table{\tblABFGS};
-                        \addplot table{\tblAHuang};
-                        \addplot table{\tblABiggs};
-                    \end{semilogyaxis}    
-                \end{tikzpicture} 
-                }}%
-            \qquad
-            \subfloat[\centering label 2]{{
-                \begin{tikzpicture}
-                    \begin{semilogyaxis}[
-                        boxplot,
-                        table/y=N_Iter,
-                        boxplot/draw direction=y,
-                        title={Numero de Iterações},
-                        xlabel={Métodos},
-                        grid=major,
-                        xtick={1,2,3,4},
-                        xticklabels={DFP,BFGS,Huang,Biggs},]
-                        \addplot table{\tblADFP};
-                        \addplot table{\tblABFGS};
-                        \addplot table{\tblAHuang};
-                        \addplot table{\tblABiggs};
-                    \end{semilogyaxis}    
-                \end{tikzpicture} 
-                }}%
-            \qquad
-            \subfloat[\centering label 3]{{
-                \begin{tikzpicture}
-                    \begin{semilogyaxis}[
-                        boxplot,
-                        table/y=N_Evals_F,
-                        boxplot/draw direction=y,
-                        title={Numero de avaliações da função Objetivo},
-                        xlabel={Métodos},
-                        grid=major,
-                        xtick={1,2,3,4},
-                        xticklabels={DFP,BFGS,Huang,Biggs},]
-                        \addplot table{\tblADFP};
-                        \addplot table{\tblABFGS};
-                        \addplot table{\tblAHuang};
-                        \addplot table{\tblABiggs};
-                    \end{semilogyaxis}    
-                \end{tikzpicture} 
-            }}%
-            \caption{2 Figures side by side}%
-            \label{fig:example}%
-        \end{figure}
-
-         \begin{figure}[h!]            
-            \pgfplotsset{width=16cm,height=4.94cm}
-            \centering            
-            \subfloat[\centering label 1]{{
-                \begin{tikzpicture}
-                    \begin{axis}[%
-                    scatter/classes={%
-                    DFP={mark=o,draw=black},BFGS={mark=o,draw=blue}}]
-                        \addplot[scatter,only marks,scatter src=explicit]table[x=spl,y=Erro_Xsol_P,meta=Metodo]{\tblADFP};
-                        \addplot[scatter,only marks,scatter src=explicit]table[x=spl,y=Erro_Xsol_P,meta=Metodo]{\tblABFGS};
-                    \end{axis}                     
-                \end{tikzpicture} 
-                }}%              
-            \caption{2 Figures side by side}%
-            \label{fig:example}%
-        \end{figure}
-            
-            
-
-        \begin{minipage}[h!]{\linewidth}
-            \centering
-            \hrule
-            \vspace{2mm}
-            Técnica da Seção Áurea Feita por meio de Aproximações Quadráticas para $F(x)$ \\ $\alpha=0$
-            \vspace{2mm}
-            \noindent
-            \hrule 
-            \vspace{2mm}
-            Tempo de Processamento Médio\\
-            \label{tab:tblBa} 
-            \writetablestt{\tblBa}\par
-            \bigskip
-            \centering
-            Número de Iterações\\
-            \label{tab:tblBb} 
-            \writetablestt{\tblBb}\par
-            \bigskip
-            \centering
-            Número de Avaliações de $f(x)$\\
-            \label{tab:tblBc} 
-            \writetablestt{\tblBc}\par
-            \vspace{2mm}
-            \hrule
-            \vspace{2mm}
-            \captionof{table}{Análise estatística dos Métodos Quase-Newton para a técnica da seção áurea feita por meio da avaliação direta da função objetivo e parâmetro $\alpha=0$}
-        \end{minipage}
-
-        \begin{minipage}[h!]{\linewidth}
-            \centering
-            \hrule
-            \vspace{2mm}
-            Técnica da Seção Áurea Feita por meio da avaliação direta de $F(x)$ \\ $\alpha=0$
-            \vspace{2mm}
-            \noindent
-            \hrule 
-            \vspace{2mm}
-            Tempo de Processamento Médio\\
-            \label{tab:tblCa} 
-            \writetablestt{\tblCa}\par
-            \bigskip
-            \centering
-            Número de Iterações\\
-            \label{tab:tblCb} 
-            \writetablestt{\tblCb}\par
-            \bigskip
-            \centering
-            Número de Avaliações de $f(x)$\\
-            \label{tab:tblCc} 
-            \writetablestt{\tblCc}\par
-            \vspace{2mm}
-            \hrule
-            \vspace{2mm}
-            \captionof{table}{Análise estatística dos Métodos Quase-Newton para a técnica da seção áurea feita por meio da avaliação direta da função objetivo e parâmetro $\alpha=0$}
-        \end{minipage}
-
-        \begin{minipage}[h!]{\linewidth}
-            \centering
-            \hrule
-            \vspace{2mm}
-            Técnica da Seção Áurea Feita por meio de Aproximações Quadráticas para $F(x)$ \\ $\alpha=0.0236$
-            \vspace{2mm}
-            \noindent
-            \hrule 
-            \vspace{2mm}
-            Tempo de Processamento Médio\\
-            \label{tab:tblDa} 
-            \writetablestt{\tblDa}\par
-            \bigskip
-            \centering
-            Número de Iterações\\
-            \label{tab:tblDb} 
-            \writetablestt{\tblDb}\par
-            \bigskip
-            \centering
-            Número de Avaliações de $f(x)$\\
-            \label{tab:tblDc} 
-            \writetablestt{\tblDc}\par
-            \vspace{2mm}
-            \hrule
-            \vspace{2mm}
-            \captionof{table}{Análise estatística dos Métodos Quase-Newton para a técnica da seção áurea feita por meio da avaliação direta da função objetivo e parâmetro $\alpha=0.0263$}
-        \end{minipage}
-
+    \subsection{Técnica da Seção Áurea Feita por meio da avaliação direta de $F(x)$ e $\alpha=-0.0236$}
+        \input{sections/section3-6_1}
+    \subsection{Técnica da Seção Áurea Feita por meio de Aproximações Quadráticas para $F(x)$ e $\alpha=0$}   
+        \input{sections/section3-6_2}
+    \subsection{Técnica da Seção Áurea Feita por meio da avaliação direta de $F(x)$ e $\alpha=0$}
+        \input{sections/section3-6_3}
+    \subsection{Técnica da Seção Áurea Feita por meio de Aproximações Quadráticas para $F(x)$ e $\alpha=0.0236$}
+        \input{sections/section3-6_4}
 \newpage
